--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,33 @@
+server.port= 8083
 
+spring.datasource.url=jdbc:mysql://localhost:3306/androidpro?serverTimezone=Asia/Seoul
+
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+
+# Hibernate properties
+
+
+#MySql ?? ??
+
+
+#???? ?? ?? ??
+spring.jpa.properties.hibernate.show_sql=true
+
+#???? ???? ??? ???? ?? ???
+spring.jpa.properties.hibernate.format_sql=true
+
+#??? ???? ???? ??? ???? ??
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+#ddl-auto ??
+#none - ???? ??
+#create - ?? ??? ?? ? ??? ??
+#create-drop - ?? ??? ?? ? ??? ??, ?? ??? ??? ??
+#update: ??? ??? ??
+#validate: ???? ??? ?? ?? ??
+#???? - none/validate
+#???? - create/create-drop/update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
