--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,8 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation group: 'org.springframework', name: 'spring-web', version: '6.1.0'
+    implementation 'org.springframework:spring-web:6.1.0'
+    implementation    'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
