[Feat] OAuth2 작성중....
Spring security 6.1 버전으로 로그인/로그아웃 구현중....

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,27 +6,26 @@ spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 
-# Hibernate properties
 
-
-#MySql ?? ??
-
-
-#???? ?? ?? ??
 spring.jpa.properties.hibernate.show_sql=true
 
-#???? ???? ??? ???? ?? ???
+
 spring.jpa.properties.hibernate.format_sql=true
 
-#??? ???? ???? ??? ???? ??
+
 logging.level.org.hibernate.type.descriptor.sql=trace
 
-#ddl-auto ??
-#none - ???? ??
-#create - ?? ??? ?? ? ??? ??
-#create-drop - ?? ??? ?? ? ??? ??, ?? ??? ??? ??
-#update: ??? ??? ??
-#validate: ???? ??? ?? ?? ??
-#???? - none/validate
-#???? - create/create-drop/update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+
+spring.security.userEntity.name=userEntity
+spring.security.userEntity.password=pass
+spring.security.userEntity.roles=USER
+
+# Logging level
+logging.level.org.springframework.security=DEBUG
+
+
+# Google
+spring.security.oauth2.client.registration.google.client-id=699485435130-0r27p0o83i0qeg0p0k5vcorg5goednrm.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
